--- a/rubik.html
+++ b/rubik.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="rubik.css" />
 </head>
 <body>
-    <img src="sematikus.png" alt="Rubik-kocka" title="Rubik-kocka">
+    <img id="cimkep" src="sematikus.png" alt="Rubik-kocka" title="Rubik-kocka">
     <h1>Rubik-kocka</h1>
 
     <p>
